Updated ci.yml file

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,6 +14,22 @@ jobs:
         runs-on: ubuntu-latest
         steps:
             - name: Checkout repository
-            - uses: actions/checkout@v4
-            
-
+              uses: actions/checkout@v4
+            - name: Set up Python
+              uses: actions/setup-python@v5
+              with:
+                python-version: '3.13'
+            - name: Install dependencies
+              run: |
+                Python -m install pip install --upgrade pip
+                pip install -r requirements.txt
+            - name: Run robot framework tests
+              run: |
+                mkdir -p results
+                robot --outputdir results --variable BROWSER:headlesschrome tests/
+            - name: Upload test reports
+              uses: actions/upload-artifact@v4
+              with:
+                name: Robot test reports
+                path: results/
+                retention-days: 7
