--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,7 +21,7 @@ jobs:
                 python-version: '3.13'
             - name: Install dependencies
               run: |
-                Python -m install pip install --upgrade pip
+                python -m install pip install --upgrade pip
                 pip install -r requirements.txt
             - name: Run robot framework tests
               run: |
