--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -57,7 +57,7 @@ jobs:
               with:
                 github_token: ${{ secrets.GITHUB_TOKEN }}
                 publish_dir: ./results
-                destination_dir: /test-reports
+                destination_dir: test-reports
                 user_name: "GitHub Actions"
                 user_email: "actions@github.com"
               if: always()
